fix overflow and README link

--- a/pages/index.css
+++ b/pages/index.css
@@ -36,7 +36,3 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
-
-* {
-  outline: 1px solid red;
-  }
